--- a/Camera_Calibration.ipynb
+++ b/Camera_Calibration.ipynb
@@ -31,7 +31,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -74,7 +74,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -104,7 +104,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -160,7 +160,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -232,7 +232,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "id": "YU-kZ-M7PBTl"
       },
@@ -269,7 +269,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "id": "bjZtbhnoTLLr"
       },
@@ -292,7 +292,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "id": "5JOeVr7pGo8P"
       },
@@ -324,7 +324,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "id": "geTmpGCqVFqE"
       },
@@ -350,7 +350,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "id": "N_6ZFf48PgLG"
       },
@@ -389,7 +389,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "id": "AEDOogMEgdGy"
       },
@@ -409,7 +409,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "id": "MsUUENQXP1JU"
       },
@@ -457,7 +457,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "id": "cHvWvM6sq-e4"
       },
@@ -478,7 +478,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -569,7 +569,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -640,7 +640,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {
         "id": "lnnT0rSPQq_B"
       },
@@ -674,10 +674,9 @@
         "          y_mm = real_coordinates[j, 1]\n",
         "\n",
         "          point_cam = Gst[i] @ np.array([x_mm, y_mm, 0, 1])\n",
-        "          #r = np.sqrt((point_cam[0]) ** 2 + (point_cam[1]) ** 2)\n",
         "          point_cam /= point_cam[2]\n",
         "\n",
-        "          point_im = K @ point_cam[:3] #np.array([point_cam[0] , point_cam[1], 1]) #\n",
+        "          point_im = K @ point_cam[:3]\n",
         "          point_im /= point_im[2]\n",
         "\n",
         "          r = np.sqrt(((point_im[0]-c[0])/alpha[0]) ** 2 + ((point_im[1] - c[1])/alpha[1])  ** 2)\n",
@@ -703,7 +702,7 @@
       "metadata": {
         "id": "thk6kbB7_QO1"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -717,7 +716,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "metadata": {
         "id": "rB0BJ6UeHHOP"
       },
@@ -789,7 +788,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -844,7 +843,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -932,7 +931,7 @@
         "id": "EItSqMiTXnmv",
         "outputId": "3fc85f12-8c40-47a9-d81b-07aed89a8bb2"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -992,7 +991,7 @@
         "id": "kWp97pU-rl31",
         "outputId": "1a4f562b-234d-4d0c-b2ed-fa32f8fed285"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
